Finished challenge 2 last night, forgot to push it.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
           </button>
         </div>
       </div>
+      <div class="two">
+        <form>
+          <label for="amount">How Many?</label>
+          <input type="text" name="amount" id="amount" />
+          <label for="coin">Which Coin?</label>
+          <select name="coin" id="coin">
+            <option value="penny">Penny</option>
+            <option value="nickel">Nickel</option>
+            <option value="dime">Dime</option>
+            <option value="quarter">Quarter</option>
+          </select>
+          <button>Make Money!</button>
+        </form>
+        <div class="coin-container"></div>
+      </div>
     </main>
     <script src="script.js"></script>
   </body>
