Finished the third challenge of the lab

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
         </form>
         <div class="coin-container"></div>
       </div>
+      <div class="three">
+        <div class="light-bulb">
+          <p>Light Bulb</p>
+        </div>
+        <ul class="btn-container">
+          <li><button class="light-btn" data-mode="on">On</button></li>
+          <li><button class="light-btn" data-mode="off">Off</button></li>
+          <li><button class="light-btn" data-mode="toggle">Toggle</button></li>
+          <li><button class="light-btn" data-mode="end">End</button></li>
+        </ul>
+      </div>
     </main>
     <script src="script.js"></script>
   </body>
